--- a/css/styles.css
+++ b/css/styles.css
@@ -147,3 +147,56 @@ body {
     width: 100%;
 }
 
+/* Third page */
+.t-page {
+    background-color: #1D1D1D;
+    padding-bottom: 40px;
+}
+
+.t-page span{
+    color: var(--primary);
+}
+
+.t-page #skills {
+    margin: 0;
+    padding-top: 40px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    color: #4F4F4F;
+}
+
+.t-page h4 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 25px;
+    color: #F1F1F1;
+}
+
+.t-page .skills-presentation .titles-skills {
+    text-align: center;
+    color: #027e6f;
+    font-weight: 800;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.t-page .skills-presentation hr {
+    margin: 0 20%;
+    background-color: #123C37;
+    height: 2px;
+    border: 1px solid #123C37;
+    border-radius: 4px;
+}
+
+.t-page .skills-presentation .all-skills svg {
+    width: 50px;
+}
+
+.t-page .skills-presentation .all-skills {
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+    column-gap: 1rem;
+    padding: 1rem;
+}
