--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,51 @@ body {
 }
 
 /* Third Page */
+.third-page {
+    background-color: #1D1D1D;
+}
 
+.third-page #ab-me {
+    margin: 0;
+    padding-top: 40px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    color: #4F4F4F;
+}
+
+.third-page h4 {
+    font-weight: 600;
+    text-align: center;
+    font-size: 20px;
+    color: #F1F1F1;
+    margin: 0;
+}
+
+.third-page span{
+    color: var(--primary);
+}
+
+.third-page #cuerpo-ab-me {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.third-page #imagen-ab {
+    width: 35%;
+}
+.third-page #imagen-ab img {
+    width: 100%;
+}
+
+.third-page #cuerpo-ab-me #cp-ab {
+    width: 40%;
+    margin-top: 30px;
+    font-size: 1.5rem;
+    text-align: center;
+}
 
 /* Four page */
 .four-page {
@@ -164,17 +208,18 @@ body {
 .four-page #skills {
     margin: 0;
     padding-top: 40px;
-    text-align: center;
+    padding-left: 40px;
     font-weight: 400;
     font-size: 14px;
     color: #4F4F4F;
 }
 
-.four-page h4 {
-    text-align: center;
-    font-weight: 600;
-    font-size: 25px;
+.four-page h5 {
+    font-weight: 400;
+    font-size: 20px;
     color: #F1F1F1;
+    padding-left: 40px;
+    margin: 15px 0 35px 0;
 }
 
 .four-page .skills-presentation .titles-skills {
