--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ body {
     font-size: 20px;
     color: #F1F1F1;
     margin: 0;
+    padding-top: 12px;
 }
 
 .third-page span{
@@ -248,4 +249,127 @@ body {
     justify-content: center;
     column-gap: 1rem;
     padding: 1rem;
+}
+
+/* Fifth page */
+.fifth-page {
+    padding: 20px;
+    background-image: url(./../imgs/bg-contact.jpg);
+    background-size: cover;
+}
+
+.fifth-page span {
+    color: aliceblue;
+}
+
+.fifth-page #contact-p {
+    margin: 0;
+    padding-top: 40px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 12px;
+    color: #4F4F4F;
+}
+
+.fifth-page h6 {
+    font-weight: 600;
+    text-align: center;
+    font-size: 23px;
+    color: #F1F1F1;
+    margin: 0;
+    margin-top: 15px;
+    color: var(--primary);
+}
+
+.fifth-page #text-contact {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 13px;
+    font-weight: 300;
+}
+
+.fifth-page .form-contact {
+    margin: 60px 40px;
+    background-color: #1D1D1D;
+    padding: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    border-radius: 10px;
+}
+
+.fifth-page .form-contact #left-side {
+    width: 35%;
+    padding: 10px;
+}
+
+.fifth-page .form-contact #left-side #ls-p {
+    color: var(--primary);
+}
+
+.fifth-page .form-contact #left-side .addons {
+    margin-top: 20px;
+}
+
+.fifth-page .form-contact #left-side .addons .icon {
+    display: flex;
+    column-gap: 20px;
+}
+
+.fifth-page .form-contact #left-side .addons .icon svg {
+    width: 30px;
+}
+
+.fifth-page .form-contact #left-side .addons .icon p {
+    color: var(--primary);
+}
+
+.fifth-page .form-contact #left-side .addons .icon #ch-color {
+    color: #E1E1E1;
+}
+
+.fifth-page #right-side {
+    width: 40%;
+}
+
+.fifth-page #right-side form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    color: #959595;
+}
+
+.fifth-page #right-side form input {
+    height: 30px;
+    width: 100%;
+    color: #636363;
+    background-color: #1D1D1D;
+    border: 1px solid #636363;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.fifth-page #right-side form #text-box {
+    width: calc(100%-100px);
+    height: 80px;
+    padding: 15px;
+    color: #636363;
+    outline: none;
+    resize: none;
+    font-size: 16px;
+    background-color: #1D1D1D;
+    border: 1px solid #636363;
+    border-radius: 10px;
+}
+
+.fifth-page #right-side form #send-btn {
+    background-color: var(--primary);
+    border: 1px solid #1D1D1D;
+    padding: 15px;
+    height: 40px;
+    width: 40%;
+    color: #11201D;
+    cursor: pointer;
+    border-radius: 2px;
+    font-weight: 500;
 }
