--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
     align-items: center;
 }
 
-.first-page header #logo {
+.first-page header .logo {
     font-family: "Lobster";
     font-weight: 400;
     font-size: 2em;
@@ -56,6 +56,12 @@ body {
 .first-page nav a {
     margin: 0 20px;
     cursor: pointer;
+}
+
+.first-page nav a:link,
+.first-page nav a:visited {
+    text-decoration: none;
+    color: #F1F1F1;
 }
 
 .first-page #resume-btn {
@@ -372,4 +378,66 @@ body {
     cursor: pointer;
     border-radius: 2px;
     font-weight: 500;
+}
+
+/* Footer */
+footer {
+    background-color: #1D1D1D;
+}
+
+footer #logo-footer {
+    font-family: "Lobster";
+    font-weight: 500;
+    font-size: 35px;
+    color: #F1F1F1;
+    cursor: pointer;
+    margin-top: 30px;
+}
+
+footer #logo-footer span {
+    color: var(--primary);
+}
+
+footer .footer-desc {
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 40px;
+}
+
+footer .footer-desc .tags {
+    display: flex;
+    column-gap: 25px;
+}
+
+footer .footer-desc .tags .tag {
+    width: 40%;
+    padding: 20px;
+    border-right: 1px solid #F1F1F1;
+}
+
+footer .footer-desc .tags #tag2 {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+footer .footer-desc .tags #tag2 .redes-icons {
+    display: flex;
+    column-gap: 10px;
+}
+
+footer #finalOfPage {
+    padding: 10px 0;
+    margin-top: 40px;
+    border-top: 1px solid #F1F1F1;
+    text-align: center;
+}
+
+footer #finalOfPage a,
+footer #finalOfPage a:link,
+footer #finalOfPage a:visited {
+    color: var(--primary);
+    text-decoration: none;
 }
