--- a/css/styles.css
+++ b/css/styles.css
@@ -135,10 +135,11 @@ body {
 }
 
 .second-page .proyectos {
-    padding: 40px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .second-page .proyectos .proyecto {
@@ -358,7 +359,7 @@ body {
 }
 
 .fifth-page #right-side form #text-box {
-    width: (90%);
+    width: 90%;
     height: 80px;
     padding: 15px;
     color: #636363;
@@ -375,11 +376,12 @@ body {
     border: 1px solid #1D1D1D;
     padding: 15px;
     height: 40px;
-    width: 40%;
+    width: 54%;
     color: #11201D;
     cursor: pointer;
     border-radius: 2px;
     font-weight: 500;
+    align-self: center;
 }
 
 /* Footer */
